# fwupd

plugins/: meson.build
plugins/mnt-pico/: README.md  fu-mnt-pico-common.c  fu-mnt-pico-common.h  fu-mnt-pico-device.c  fu-mnt-pico-device.h  fu-mnt-pico-plugin.c  fu-mnt-pico-plugin.h  fu-mnt-pico.rs  meson.build  mnt-pico.quirk
plugins/mntre/: fu-mntre-device.c  fu-mntre-plugin.c  mntre_reset.h
plugins/uf2/: fu-uf2-device.c
src/: fu-udev-backend.c
